improv: added bronze sponsor
Add Braintree logo on PolyConf website

--- a/index.html
+++ b/index.html
@@ -2081,6 +2081,9 @@
           <li class="bronze sponsor stackbuilders">
             <div class="logo"><a href="http://www.stackbuilders.com/"><img src="assets/sponsors/stack_builders.png"/></a></div>
           </li>
+          <li class="bronze sponsor braintree">
+            <div class="logo"><a href="https://www.braintreepayments.com/"><img src="assets/sponsors/braintree.jpg"/></a></div>
+          </li>
         </ul>
       </div>
     </div>
