improv: add bronze sponsor
Add Captaine Train logo on PolyConf website

--- a/index.html
+++ b/index.html
@@ -2084,6 +2084,9 @@
           <li class="bronze sponsor braintree">
             <div class="logo"><a href="https://www.braintreepayments.com/"><img src="assets/sponsors/braintree.jpg"/></a></div>
           </li>
+          <li class="bronze sponsor capitainetrain">
+            <div class="logo"><a href="https://www.capitainetrain.com/"><img src="assets/sponsors/capitaine_train.svg"/></a></div>
+          </li>
         </ul>
       </div>
     </div>
