fix: Change register button url to point tickets

--- a/index.html
+++ b/index.html
@@ -2258,7 +2258,7 @@
       <li><a href="http://blog.polyconf.com">Blog</a></li>
     </ul>
     <ul class="buttons">
-      <li><a href="http://sponsor.polyconf.com" class="green button">Register now</a></li>
+      <li><a href="#tickets-intro" class="green button">Register now</a></li>
       <li class="become"><a href="http://sponsor.polyconf.com" class="blue button">Become a Sponsor</a></li>
       <li><a href="http://14.polyconf.com" class="ghost button">Previous edition</a></li>
     </ul>
