speaker: add Christine's talk title

--- a/index.html
+++ b/index.html
@@ -1160,12 +1160,12 @@
                     <div class="time">17:40 - 18:10</div>
                     <div class="name">
                       <figure class="face" style="background-image: url(assets/speakers/christine_corbett.jpg)">&nbsp;</figure>
-                      <span class="title">TBA</span>
+                      <span class="title">Polyglot in High Performance Computing</span>
                       <span class="person">Christine Corbett Moran</span>
                     </div>
                   </div>
                   <div class="long">
-                    <p>TBA</p>
+                    <p>The Cactus framework is a modular environment for parallel high performance computing. It allows development in the high performance language of choice: C, C++, F77, F90, and even OpenCL/CUDA, all while making use of existing components (called "thorns") and other standard high performance computing technology in a language independent manner. In this talk I introduce the Cactus framework with some examples of its use in computational general relativity to simulate black holes, neutron stars and more. </p>
                   </div>
                 </li>
 
