fix: link to Jobs

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <div id="jobs-bar">
   
-  <a href="#">Check Poly Conf Jobs</a>
+  <a href="http://jobs.polyconf.com">Check Poly Conf Jobs</a>
   
 </div>
 
