improv: added logo
Add Intellection logo to PolyConf website

--- a/index.html
+++ b/index.html
@@ -2073,6 +2073,9 @@
           <li class="bronze sponsor capitainetrain">
             <div class="logo"><a href="https://www.capitainetrain.com/"><img src="assets/sponsors/capitaine_train.svg"/></a></div>
           </li>
+          <li class="bronze sponsor intellection">
+            <div class="logo"><a href="http://www.intellection.io/"><img src="assets/sponsors/intellection_2.png"/></a></div>
+          </li>
         </ul>
       </div>
     </div>
