speaker: add Marek Matczak

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
 <body>
 
 <div id="jobs-bar">
-  
   <a href="http://jobs.polyconf.com">Check Poly Conf Jobs</a>
-  
 </div>
 
 <div id="wrapper">
@@ -994,6 +992,30 @@
             </div>
           </div>
         </li>
+        <li class="speaker">
+          <div class="inside">
+            <div class="img">
+              <figure>
+                <a class="face" style="background-image: url(assets/speakers/marek_matczak.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/#">&nbsp;</a>
+                    <a class="website" href="https://github.com/mmatczak">&nbsp;</a>
+                  </span>
+              </figure>
+            </div>
+            <div class="text">
+              <h3>Marek Matczak</h3>
+
+              <p class="title">Architect and Developer at Capgemini</p>
+
+              <p class="description">Software architect working for Capgemini Software Solutions Center in Wrocław, Poland. Marek specializes in web applications and Java/JavaScript-related technologies. Currently he supports various projects as a technical lead and a solution architect. He likes programming which allows him to stay close to code development issues. He graduated from Poznań University of Technology in 2003 and started his career at Capgemini in 2004.</p>
+              <ul class="tags">
+                <li class="java">Java</li>
+                <li class="js">JavaScript</li>
+              </ul>
+            </div>
+          </div>
+        </li>
       </ul>
       
       <div class="agenda" id="agenda">
@@ -1125,23 +1147,25 @@
                     <span class="more-button">More</span>
                   </div>
                 </li>
-  
+
                 <li class="event with-description normal">
                   <div class="short">
                     <div class="time">16:40 - 17:10</div>
                     <div class="name">
-                      <span class="title">Building Web Apps in Elm</span>
-                      <span class="person">Jivago Alves</span>
+                      <span class="title">AngularJS: All you can learn of in 30 minutes</span>
+                      <span class="person">Marek Matczak</span>
                     </div>
                   </div>
                   <div class="long">
-                    <p>As developers, we have been building rich web-based applications (or trying to) for some time and still can't avoid the complexity behind modeling the state of the world around us. In this talk we'll discuss a functional approach that radically simplify things using reactive web components backed by Elm, a functional reactive language that compiles to HTML, CSS and JavaScript. We choose Elm to bring us simplicity from FP principles and ultimately to bring its powerful type system to JavaScript on the browser.</p>
+                    <p>In fact, the talk will depend on the audience... After a short survey we will decide what AngularJS topic to address. Whether it be live-coding an application from scratch, showing JavaScript tools supporting development (Gulp/Bower/Karma) or demystifying directives, you will not get bored :)</p>
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
                     <span class="more-button">More</span>
                   </div>
                 </li>
+  
+                
 
                 <li class="event coffee">
                   <div class="short">
@@ -1300,25 +1324,33 @@
   
             <li class="event lunch">
               <div class="short">
-                <div class="time">12:30 - 13:45</div>
+                <div class="time">12:30 - 13:30</div>
                 <div class="name">
                   <span class="title">Lunch</span>
                 </div>
               </div>
             </li>                
 
-            <li class="event registration">
-              <div class="short">
-                <div class="time">13:45 - 14:00</div>
-                <div class="name">
-                  <span class="title">Animation</span>
-                </div>
-              </div>
-            </li>
-  
             <li class="event with-description normal">
               <div class="short">
-                <div class="time">14:00 - 14:30</div>
+                <div class="time">13:30 - 14:00</div>
+                <div class="name">
+                  <span class="title">Building Web Apps in Elm</span>
+                  <span class="person">Jivago Alves</span>
+                </div>
+              </div>
+              <div class="long">
+                <p>As developers, we have been building rich web-based applications (or trying to) for some time and still can't avoid the complexity behind modeling the state of the world around us. In this talk we'll discuss a functional approach that radically simplify things using reactive web components backed by Elm, a functional reactive language that compiles to HTML, CSS and JavaScript. We choose Elm to bring us simplicity from FP principles and ultimately to bring its powerful type system to JavaScript on the browser.</p>
+              </div>
+              <div class="buttons">
+                <span class="close-button">Close</span>
+                <span class="more-button">More</span>
+              </div>
+            </li>
+
+            <li class="event with-description normal">
+              <div class="short">
+                <div class="time">14:10 - 14:40</div>
                 <div class="name">
                   <span class="title">Phoenix: a web framework for the new web</span>
                   <span class="person">José Valim</span>
@@ -1335,7 +1367,7 @@
   
             <li class="event with-description normal">
               <div class="short">
-                <div class="time">14:40 - 15:10</div>
+                <div class="time">14:50 - 15:20</div>
                 <div class="name">
                   <span class="title">An Introduction to Crystal</span>
                   <span class="person">Erik Michaels-Ober</span>
@@ -1352,7 +1384,7 @@
   
             <li class="event with-description lightning">
               <div class="short">
-                <div class="time">15:20 - 15:50</div>
+                <div class="time">15:30 - 16:00</div>
                 <div class="name">
                   <span class="title">Lightning Talks</span>
                   <span class="person">TBA</span>
@@ -1369,7 +1401,7 @@
   
             <li class="event with-description normal">
               <div class="short">
-                <div class="time">16:00 - 16:30</div>
+                <div class="time">16:10 - 16:40</div>
                 <div class="name">
                   <span class="title">Things you almost missed in programming languages</span>
                   <span class="person">Yan Cui</span>
@@ -1387,7 +1419,7 @@
   
             <li class="event with-description normal">
               <div class="short">
-                <div class="time">16:40 - 17:10</div>
+                <div class="time">16:50 - 17:20</div>
                 <div class="name">
                   <span class="title">Contracts as Types</span>
                   <span class="person">Jessica Kerr</span>
@@ -1404,7 +1436,7 @@
 
             <li class="event coffee">
               <div class="short">
-                <div class="time">17:10 - 17:40</div>
+                <div class="time">17:20 - 17:50</div>
                 <div class="name">
                   <span class="title">Coffee Break</span>
                 </div>
@@ -1416,7 +1448,7 @@
 
             <li class="event keynote">
               <div class="short">
-                <div class="time">17:40 - 18:10</div>
+                <div class="time">17:50 - 18:20</div>
                 <div class="name">
                   <figure class="face" style="background-image: url(assets/speakers/bodil_stokke.jpg)">&nbsp;</figure>
                   <span class="title">Post-FRP Frontend Programming</span>
@@ -1434,7 +1466,7 @@
 
             <li class="event keynote">
               <div class="short">
-                <div class="time">18:20 - 18:50</div>
+                <div class="time">18:30 - 19:00</div>
                 <div class="name">
                   <figure class="face" style="background-image: url(assets/speakers/sam_tobin_hochstadt.jpg)">&nbsp;</figure>
                   <span class="title">Racket and Typed Racket: the power of extensibility</span>
@@ -1491,8 +1523,8 @@
               <div class="short">
                 <div class="time">9:40 - 10:10</div>
                 <div class="name">
-                  <span class="title">Jump Start ClojureScript</span>
-                  <span class="person">Anna Pawlicka</span>
+                  <span class="title">TBA</span>
+                  <span class="person">TBA</span>
                 </div>
               </div>
             </li>
