workshop: add Tomasz workshop

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="column" id="number-of-attendees">
 
           <figure><img src="assets/img/badge.svg" alt="Badge"/></figure>
-          <span class="big">400</span>
+          <span class="big">300</span>
           <span class="small">attendees</span>
 
         </div>
@@ -1843,8 +1843,25 @@
           </div>
         </div>
       </div>
+
+      <div class="workshop">
+        <h2>Building modern web apps with AngularJS <span class="author">Tomasz Szewcow</span><figure class="face" style="background-image: url(assets/speakers/tomasz_szewcow.jpg)">&nbsp;</figure></h2>
+
+        <div class="row">
+          <div class="about">
+            <h3>About workshop</h3>
+            <p>Are you scared of JavaScript? Do you write (copy) your code (from the internet), but you don’t know why it’s (not) working? Would you like to learn how to build modern web applications? This workshop is for you!</p>
+            <p>We start with a crash JavaScript course focusing on those elements which are relevant to AngularJS. After that we implement an AngularJS application from scratch showing AngularJS basics: two-way binding, modules, and dependency injection. Eventually we demystify directives and show how to test the elements we have implemented before.</p>
+          </div>
+          <div class="bio">
+            <h3>About Tomasz</h3>
+            <p>TBA</p>
+          </div>
+        </div>
+      </div>
     </div>
   </article>
+
 
   <article id="tickets-intro" class="fixed">
     <section class="content">
