workshop: add Tomasz workshop to agenda

--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,7 @@
                       <span class="person">Write a Relational Scheme Interpreter in miniKanren</span>
                       <span class="person">Mobile development in the smart way with ionicframework</span>
                       <span class="person">Why should you learn to program Commodore 64 this year?</span>
+                      <span class="person">Building modern web apps with AngularJS</span>
                     </div>
                   </div>
                   <div class="long">
