agenda: adjustments, Olek earlier, new speakers

--- a/index.html
+++ b/index.html
@@ -884,6 +884,29 @@
           <div class="inside">
             <div class="img">
               <figure>
+                <a class="face" style="background-image: url(assets/speakers/silvia_moura_pina.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="">&nbsp;</a>
+                    <a class="website" href="">&nbsp;</a>
+                  </span>
+              </figure>
+            </div>
+            <div class="text">
+              <h3>Silvia Moura Pina</h3>
+
+              <p class="title">Software Engineer at Zalando</p>
+
+              <p class="description">Silvia Moura Pina joined Zalando in January 2015 and is a software engineer on the Brand Solutions-Brand Analytics team, which works on the core analytics-related functions important to Zalando's brand partners. She uses Google BigQuery for a lot of her work, and is taking her first steps with the Scala programming language. She has a masters degree in Information Systems and Computer Engineering from the Instituto Superior Tecnico (University of Lisbon), and did her dissertation in the field of data mining while working there as a researcher. She's a co-director of Berlin's new Women Who Code chapter and a member of the Portuguese Engineers' Guild.</p>
+              <ul class="tags">
+                <li class="rb">Scala</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="speaker">
+          <div class="inside">
+            <div class="img">
+              <figure>
                 <a class="face" style="background-image: url(assets/speakers/jivago_alves.jpg)">&nbsp;</a>
                   <span class="links">
                     <a class="twitter" href="http://twitter.com/jivagoalves">&nbsp;</a>
@@ -959,6 +982,28 @@
                 <li class="rb">Ruby</li>
                 <li class="cljs">ClojureScript</li>
                 <li class="js">JavaScript</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="speaker">
+          <div class="inside">
+            <div class="img">
+              <figure>
+                <a class="face" style="background-image: url(assets/speakers/bhuvaneswary_vijayan.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="">&nbsp;</a>
+                    <a class="website" href="">&nbsp;</a>
+                  </span>
+              </figure>
+            </div>
+            <div class="text">
+              <h3>Bhuvaneswary Vijayan</h3>
+
+              <p class="title">People Lead at Zalando</p>
+
+              <p class="description">As a people lead at Zalando, Bhuvaneswary Vijayan guides members of the company's technology team on their personal Tours of Mastery: individualized tracks incorporating skills acquisition and other professional development opportunities. Prior to becoming a People Lead, she built testing strategies for the company's many multidisciplinary projects. Bhuvana joined Zalando from Google, where she was a product specialist for test engineering; she has also worked at Nik Software, Aztecsoft and HP.</p>
+              <ul class="tags">
               </ul>
             </div>
           </div>
@@ -1293,12 +1338,14 @@
               <div class="short">
                 <div class="time">11:20 - 11:50</div>
                 <div class="name">
-                  <span class="title">Simply Devign</span>
-                  <span class="person">Felix Hawkins & Karolina Ferenz</span>
+                  <span class="title">Rocking the Time Series boat with C, Haskell and ClojureScript</span>
+                  <span class="person">Alex Petrov</span>
                 </div>
               </div>
               <div class="long">
-                <p>Designers and developers sometimes disagree about what would be best. By examining the differences and the similarities both can realise that they share much more than they think. Best practices in both realms are frequently identical and the goal is always the same: to communicate effectively, whether to a computer or a person. Join us on our mission to engage the design world, far more, in the world of open source and code.</p>
+                <p>Time Series have an amazing potential for Querying, Parallelisation and Query Composition, because of the nature of the Data itself, this is exactly why general-purpose stores won't ever be the best fit for Time Series data.</p>
+                <p>Continuum, a Time Series store was built keeping the key features of Time Series data in mind. State-of-art Algebraic structures, can be used to build flexible and composite Query API, Compact data structures can be used to save up space and reduce deserialisation effort while reading data from DB.</p>
+                <p>An adventure of building a Modern Time Series database in C + Haskell, with ClojureScript front-end, that brings the visibility of everything going on in your system on a whole new level.</p>
               </div>
               <div class="buttons">
                 <span class="close-button">Close</span>
@@ -1519,29 +1566,33 @@
                 <span class="more-button">More</span>
               </div>
             </li>
-  
+
             <li class="event with-description normal">
               <div class="short">
                 <div class="time">9:40 - 10:10</div>
+                <div class="name">
+                  <span class="title">Simply Devign</span>
+                  <span class="person">Felix Hawkins & Karolina Ferenz</span>
+                </div>
+              </div>
+              <div class="long">
+                <p>Designers and developers sometimes disagree about what would be best. By examining the differences and the similarities both can realise that they share much more than they think. Best practices in both realms are frequently identical and the goal is always the same: to communicate effectively, whether to a computer or a person. Join us on our mission to engage the design world, far more, in the world of open source and code.</p>
+              </div>
+              <div class="buttons">
+                <span class="close-button">Close</span>
+                <span class="more-button">More</span>
+              </div>
+            </li>
+  
+            <li class="event with-description normal">
+              <div class="short">
+                <div class="time">10:20 - 10:50</div>
                 <div class="name">
                   <span class="title">TBA</span>
                   <span class="person">TBA</span>
                 </div>
               </div>
-            </li>
-
-            <li class="event with-description normal">
-              <div class="short">
-                <div class="time">10:20 - 10:50</div>
-                <div class="name">
-                  <span class="title">Rocking the Time Series boat with C, Haskell and ClojureScript</span>
-                  <span class="person">Alex Petrov</span>
-                </div>
-              </div>
               <div class="long">
-                <p>Time Series have an amazing potential for Querying, Parallelisation and Query Composition, because of the nature of the Data itself, this is exactly why general-purpose stores won't ever be the best fit for Time Series data.</p>
-                <p>Continuum, a Time Series store was built keeping the key features of Time Series data in mind. State-of-art Algebraic structures, can be used to build flexible and composite Query API, Compact data structures can be used to save up space and reduce deserialisation effort while reading data from DB.</p>
-                <p>An adventure of building a Modern Time Series database in C + Haskell, with ClojureScript front-end, that brings the visibility of everything going on in your system on a whole new level.</p>
               </div>
               <div class="buttons">
                 <span class="close-button">Close</span>
