workshop: Tomasz bio

--- a/index.html
+++ b/index.html
@@ -1907,7 +1907,7 @@
           </div>
           <div class="bio">
             <h3>About Tomasz</h3>
-            <p>TBA</p>
+            <p>Tomasz is a Software Developer at Capgemini with 2 years of professional experience in developing AngularJS applications. In his everyday work he solves many development issues - luckily modern front-end frameworks and tools help him with this. He is happy with the growing importance of web applications and with the strong trend towards JavaScript frameworks.</p>
           </div>
         </div>
       </div>
