--- a/index.html
+++ b/index.html
@@ -1589,11 +1589,10 @@
                 <div class="time">10:20 - 10:50</div>
                 <div class="name">
                   <span class="title">The Polyglot Platform: How Zalando Manages Language Diversity</span>
-                  <span class="person">Nearly 800 people create the technology engine behind Zalando, Europe's leading online fashion platform. As you might expect from a company with 15 million customers in 15 different countries, our tech systems are complex, sophisticated, and polyglot. Under the hood, you'll find Java, Scala, Python, Clojure, and several other languages. In this talk, we will tell you how our tech team manages this complexity and diversity. We'll discuss our approach to development--we call it Radical Agility--and explain how this concept supports our transformation to be diverse and platform-centric. We will present some challenges and issues that we are currently facing as we try to implement Radical Agility's three pillars of Autonomy, Mastery and Purpose. Along with an understanding of Radical Agiliy, we want to show you how it influences and facilitates polyglotism in Zalando's world.</span>
+                  <span class="person">Bhuvaneswary Vijayan & Silvia Moura Pina</span>
                 </div>
               </div>
-              <div class="long">
-              </div>
+              <div class="long">Nearly 800 people create the technology engine behind Zalando, Europe's leading online fashion platform. As you might expect from a company with 15 million customers in 15 different countries, our tech systems are complex, sophisticated, and polyglot. Under the hood, you'll find Java, Scala, Python, Clojure, and several other languages. In this talk, we will tell you how our tech team manages this complexity and diversity. We'll discuss our approach to development--we call it Radical Agility--and explain how this concept supports our transformation to be diverse and platform-centric. We will present some challenges and issues that we are currently facing as we try to implement Radical Agility's three pillars of Autonomy, Mastery and Purpose. Along with an understanding of Radical Agiliy, we want to show you how it influences and facilitates polyglotism in Zalando's world.</div>
               <div class="buttons">
                 <span class="close-button">Close</span>
                 <span class="more-button">More</span>
