fix: Devign -> Design

--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
               <div class="short">
                 <div class="time">9:40 - 10:10</div>
                 <div class="name">
-                  <span class="title">Simply Devign</span>
+                  <span class="title">Simply Design</span>
                   <span class="person">Felix Hawkins & Karolina Ferenz</span>
                 </div>
               </div>
