--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,7 @@
                   <span class="person">Bhuvaneswary Vijayan & Silvia Moura Pina</span>
                 </div>
               </div>
-              <div class="long">Nearly 800 people create the technology engine behind Zalando, Europe's leading online fashion platform. As you might expect from a company with 15 million customers in 15 different countries, our tech systems are complex, sophisticated, and polyglot. Under the hood, you'll find Java, Scala, Python, Clojure, and several other languages. In this talk, we will tell you how our tech team manages this complexity and diversity. We'll discuss our approach to development--we call it Radical Agility--and explain how this concept supports our transformation to be diverse and platform-centric. We will present some challenges and issues that we are currently facing as we try to implement Radical Agility's three pillars of Autonomy, Mastery and Purpose. Along with an understanding of Radical Agiliy, we want to show you how it influences and facilitates polyglotism in Zalando's world.</div>
+              <div class="long">Nearly 800 people create the technology engine behind Zalando, Europe's leading online fashion platform. As you might expect from a company with 15 million customers in 15 different countries, our tech systems are complex, sophisticated, and polyglot. Under the hood, you'll find Java, Scala, Python, Clojure, and several other languages. In this talk, we will tell you how our tech team manages this complexity and diversity. We'll discuss our approach to development--we call it Radical Agility--and explain how this concept supports our transformation to be diverse and platform-centric. We will present some challenges and issues that we are currently facing as we try to implement Radical Agility's three pillars of Autonomy, Mastery and Purpose. Along with an understanding of Radical Agility, we want to show you how it influences and facilitates polyglotism in Zalando's world.</div>
               <div class="buttons">
                 <span class="close-button">Close</span>
                 <span class="more-button">More</span>
@@ -1966,7 +1966,7 @@
           <ul>
             <li>Entry to the conference on July 2nd, 3rd and 4th.</li>
             <li>Entry to the parties on each day of the conference.</li>
-            <li>Access to satelite events and many opportunities to connect with people.</li>
+            <li>Access to satellite events and many opportunities to connect with people.</li>
             <li>Drinks &amp; Refreshments</li>
           </ul>
 
@@ -1982,7 +1982,7 @@
       <div class="text">
         <h2>Venue</h2>
 
-        <p> PolyConf will happen at The Faculty of Law and Administration<br class="hide-on-mobile"/> of Adam Mickiewicz University in the heart of the city of POZnan, Poland.<br class="hide-on-mobile"/> The center has an auditiorium that can host 400 and additional workshop rooms.</p>
+        <p> PolyConf will happen at The Faculty of Law and Administration<br class="hide-on-mobile"/> of Adam Mickiewicz University in the heart of the city of POZnan, Poland.<br class="hide-on-mobile"/> The center has an auditorium that can host 400 and additional workshop rooms.</p>
       </div>
     </section>
   </article>
