--- a/index.html
+++ b/index.html
@@ -2233,6 +2233,7 @@
           <li class="partner"><a href="http://ionicpoland.github.io/#/"><img src="assets/partners/ionic-poland-icon.png"/></a></li>
           <li class="partner infoq"><a href="http://di.com.pl/2-edycja-polyconf15-juz-od-2-do-4-lipca-w-poznaniu-52313"><img src="assets/partners/logo_di24_kostka.svg"/></a></li>
           <li class="partner devmeetings"><a href="http://devmeetings.pl/pl"><img src="assets/partners/devmeetings.png"/></a></li>
+          <li class="partner techtrrrs"><a href="https://www.facebook.com/CafeMisjaCKFara"><img src="assets/partners/cafemisja2.jpg"/></a></li>
         </ul>
       </div>
     </div>
