fix: change jessica kerr affiliation

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
             <div class="text">
               <h3>Jessica Kerr</h3>
 
-              <p class="title">Developer at Outpace Systems</p>
+              <p class="title">Developer at Monsanto</p>
 
               <p class="description">Jessica Kerr writes Clojure and Scala. Her fascinations include property-based
-                testing and the sociological underpinnings of software. She codes remotely for Outpace, blogs, and
+                testing and the sociological underpinnings of software. She codes remotely for Monsanto, blogs, and
                 teaches two daughters how to keep the spirit of the rule while breaking it. Her home in St. Louis,
                 Missouri has five computers and no pets, unless ladybug larvae count as pets.</p>
               <ul class="tags">
