Another mobile fix.

--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
-                    <span class="more-button">More</span>
+                    <a href="" class="more-button">More</a>
                   </div>
                 </li>
   
@@ -1165,7 +1165,7 @@
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
-                    <span class="more-button">More</span>
+                    <a href="" class="more-button">More</a>
                   </div>
                 </li>
   
@@ -1182,7 +1182,7 @@
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
-                    <span class="more-button">More</span>
+                    <a href="" class="more-button">More</a>
                   </div>
                 </li>
   
@@ -1200,7 +1200,7 @@
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
-                    <span class="more-button">More</span>
+                    <a href="" class="more-button">More</a>
                   </div>
                 </li>
 
@@ -1217,7 +1217,7 @@
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
-                    <span class="more-button">More</span>
+                    <a href="" class="more-button">More</a>
                   </div>
                 </li>
   
@@ -1263,7 +1263,7 @@
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
-                    <span class="more-button">More</span>
+                    <a href="" class="more-button">More</a>
                   </div>
                 </li>
                 <li class="event party">
