improv: alissa twitter link not working

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
               <figure>
                 <a class="face" style="background-image: url(assets/speakers/alissa_bonas.jpg)">&nbsp;</a>
                   <span class="links">
-                    <a class="twitter" href="#">&nbsp;</a>
+                    <a class="twitter" href="https://twitter.com/mikeyteva">&nbsp;</a>
                     <a class="website" href="http://ghost-justablog.rhcloud.com/">&nbsp;</a>
                   </span>
               </figure>
