improv: Intellection logo size

--- a/index.html
+++ b/index.html
@@ -2194,7 +2194,7 @@
             <div class="logo"><a href="https://www.capitainetrain.com/"><img src="assets/sponsors/capitaine_train.svg"/></a></div>
           </li>
           <li class="bronze sponsor intellection">
-            <div class="logo"><a href="http://www.intellection.io/"><img src="assets/sponsors/intellection.png"/></a></div>
+            <div class="logo"><a href="http://www.intellection.io/"><img src="assets/sponsors/intellection.png" style="width:95%"/></a></div>
           </li>
         </ul>
       </div>
